--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>For Kaushal 💖</title>
+  <title>For Kaushal 💘</title>
 
-  <!-- Google Romantic Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+  <!-- Handwriting Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -15,61 +15,60 @@
       justify-content: center;
       align-items: center;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      font-family: 'Poppins', sans-serif;
+      font-family: Arial, sans-serif;
       overflow: hidden;
       text-align: center;
     }
 
     .card {
       background: white;
-      padding: 30px 35px;
-      border-radius: 18px;
-      box-shadow: 0 15px 30px rgba(0,0,0,0.25);
-      max-width: 340px;
-      animation: pop 0.8s ease;
+      padding: 30px 40px;
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
       z-index: 10;
-    }
-
-    @keyframes pop {
-      from { transform: scale(0.7); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
+      max-width: 330px;
+      position: relative;
     }
 
     h1 {
-      font-family: 'Pacifico', cursive;
       color: #e91e63;
-      margin-bottom: 10px;
     }
 
     p {
       color: #555;
-      font-size: 15px;
     }
 
     button {
-      padding: 12px 26px;
+      padding: 10px 22px;
       font-size: 16px;
       border: none;
-      border-radius: 30px;
+      border-radius: 8px;
       cursor: pointer;
-      margin-top: 15px;
-      transition: transform 0.2s;
-    }
-
-    button:hover {
-      transform: scale(1.05);
+      margin: 10px;
     }
 
     .yes {
-      background: linear-gradient(45deg, #e91e63, #ff6090);
+      background-color: #e91e63;
       color: white;
+    }
+
+    .no {
+      background-color: #ccc;
+      position: absolute;
     }
 
     .heart {
       position: absolute;
       animation: floatUp 5s linear infinite;
       color: #e91e63;
-      font-size: 20px;
+    }
+
+    .handwritten {
+      font-family: 'Dancing Script', cursive;
+      font-size: 22px;
+      color: #e91e63;
+      line-height: 1.6;
+      margin-top: 15px;
     }
 
     @keyframes floatUp {
@@ -82,101 +81,85 @@
         opacity: 0;
       }
     }
-
-    /* Popup */
-    .popup {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 99;
-    }
-
-    .popup-content {
-      background: white;
-      padding: 25px 30px;
-      border-radius: 18px;
-      text-align: center;
-      max-width: 320px;
-      animation: pop 0.6s ease;
-    }
-
-    .popup-content h2 {
-      font-family: 'Pacifico', cursive;
-      color: #e91e63;
-    }
   </style>
 </head>
 
 <body>
 
-<!-- 🎵 Background Music -->
-<audio id="bg-music" loop>
-  <source src="love.mp3" type="audio/mpeg">
-</audio>
+  <!-- 🎵 Background Music -->
+  <audio id="bgMusic" loop>
+    <source src="https://cdn.pixabay.com/audio/2022/10/30/audio_8d8c2b7a34.mp3" type="audio/mpeg">
+  </audio>
 
-<div class="card" id="card">
-  <h1>Kaushal 💕</h1>
-  <p>I made this little surprise just for you 🥰</p>
-  <p style="margin-top:10px;">Will you be my Valentine? 💘</p>
-  <button class="yes" onclick="yesClick()">Yes 💖</button>
-</div>
+  <div class="card" id="card">
+    <h1>Kaushal 💖</h1>
+    <p>I made this just for you 😊</p>
+    <h1>Will you be my Valentine? 💘</h1>
 
-<!-- 💌 Sweet Popup -->
-<div class="popup" id="popup">
-  <div class="popup-content">
-    <h2>My Heart 💖</h2>
-    <p>
-      You make my days brighter,<br>
-      my smiles wider,<br>
-      and my heart happier 💕<br><br>
-      I feel really lucky to have you ✨
-    </p>
-    <button class="yes" onclick="closePopup()">Aww 🥰</button>
+    <button class="yes" onclick="yesClick(); playMusic()">Yes 💕</button>
+    <button class="no" id="noBtn">No 💔</button>
   </div>
-</div>
 
-<script>
-  const music = document.getElementById("bg-music");
-  let played = false;
+  <script>
+    const noBtn = document.getElementById("noBtn");
+    const music = document.getElementById("bgMusic");
+    let musicPlayed = false;
 
-  document.addEventListener("click", () => {
-    if (!played) {
-      music.play();
-      played = true;
+    function playMusic() {
+      if (!musicPlayed) {
+        music.play();
+        musicPlayed = true;
+      }
     }
-  });
 
-  function yesClick() {
-    document.getElementById("popup").style.display = "flex";
-  }
+    function moveButton() {
+      noBtn.style.left = Math.random() * 200 + "px";
+      noBtn.style.top = Math.random() * 150 + "px";
+    }
 
-  function closePopup() {
-    document.getElementById("popup").style.display = "none";
-    document.getElementById("card").innerHTML = `
-      <h1>Yayyy 💕</h1>
-      <p>Thank you for making this moment special 🥰</p>
-      <p style="color:#e91e63; font-weight:500;">
-        Happy Valentine’s Day 💘
-      </p>
-    `;
-  }
+    noBtn.addEventListener("mouseover", moveButton);
 
-  function createHeart() {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.innerHTML = "💖";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.fontSize = Math.random() * 20 + 15 + "px";
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 5000);
-  }
+    function yesClick() {
+      document.getElementById("card").innerHTML = `
+        <h1>Yayyy Kaushal! 💕</h1>
 
-  setInterval(createHeart, 400);
-</script>
+        <p style="font-size:15px;">I want to tell you something 💌</p>
+
+        <div class="handwritten">
+          This is my little way of saying<br>
+          that you matter to me more than you know 💖<br><br>
+
+          Every smile of yours feels special,<br>
+          and every moment with you feels warm ✨<br><br>
+
+          I’m really glad it’s <b>you</b> 💕
+        </div>
+
+        <p style="font-size:14px; color:#777; margin-top:15px;">
+          Happy Valentine’s Day 💘
+        </p>
+
+        <p style="font-size:13px; color:#999;">
+          — From Riya 💖
+        </p>
+      `;
+    }
+
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.innerHTML = "💖";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.fontSize = Math.random() * 20 + 15 + "px";
+      heart.style.animationDuration = Math.random() * 2 + 3 + "s";
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 5000);
+    }
+
+    setInterval(createHeart, 400);
+  </script>
 
 </body>
 </html>
+
 
