--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>For Kaushal 💘</title>
 
-  <!-- Handwriting Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+  <!-- Romantic Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 
   <style>
     body {
@@ -15,60 +15,69 @@
       justify-content: center;
       align-items: center;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      font-family: Arial, sans-serif;
+      font-family: 'Dancing Script', cursive;
       overflow: hidden;
       text-align: center;
     }
 
     .card {
       background: white;
-      padding: 30px 40px;
-      border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      padding: 30px 35px;
+      border-radius: 20px;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.25);
       z-index: 10;
-      max-width: 330px;
-      position: relative;
+      max-width: 340px;
+      animation: pop 0.8s ease;
+    }
+
+    @keyframes pop {
+      from { transform: scale(0.7); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
 
     h1 {
+      font-family: 'Pacifico', cursive;
       color: #e91e63;
+      margin-bottom: 10px;
     }
 
     p {
-      color: #555;
+      font-size: 20px;
+      color: #444;
+      line-height: 1.6;
     }
 
     button {
-      padding: 10px 22px;
-      font-size: 16px;
+      padding: 12px 28px;
+      font-size: 18px;
       border: none;
-      border-radius: 8px;
+      border-radius: 30px;
       cursor: pointer;
-      margin: 10px;
+      margin-top: 15px;
+      font-family: 'Pacifico', cursive;
+      transition: transform 0.2s;
+    }
+
+    button:hover {
+      transform: scale(1.05);
     }
 
     .yes {
-      background-color: #e91e63;
+      background: linear-gradient(45deg, #e91e63, #ff6090);
       color: white;
     }
 
     .no {
-      background-color: #ccc;
+      background-color: #ddd;
       position: absolute;
+      font-family: 'Pacifico', cursive;
     }
 
     .heart {
       position: absolute;
       animation: floatUp 5s linear infinite;
       color: #e91e63;
-    }
-
-    .handwritten {
-      font-family: 'Dancing Script', cursive;
       font-size: 22px;
-      color: #e91e63;
-      line-height: 1.6;
-      margin-top: 15px;
     }
 
     @keyframes floatUp {
@@ -93,8 +102,12 @@
 
   <div class="card" id="card">
     <h1>Kaushal 💖</h1>
-    <p>I made this just for you 😊</p>
-    <h1>Will you be my Valentine? 💘</h1>
+
+    <p>I made this little surprise just for you 😊</p>
+
+    <p style="font-size:22px;">
+      Will you be my Valentine? 💘
+    </p>
 
     <button class="yes" onclick="yesClick(); playMusic()">Yes 💕</button>
     <button class="no" id="noBtn">No 💔</button>
@@ -123,23 +136,26 @@
       document.getElementById("card").innerHTML = `
         <h1>Yayyy Kaushal! 💕</h1>
 
-        <p style="font-size:15px;">I want to tell you something 💌</p>
+        <p>
+          I want to tell you something 💌
+        </p>
 
-        <div class="handwritten">
-          This is my little way of saying<br>
-          that you matter to me more than you know 💖<br><br>
+        <p>
+          Somewhere between the smiles and conversations,<br>
+          you became special to me 💖<br><br>
 
-          Every smile of yours feels special,<br>
-          and every moment with you feels warm ✨<br><br>
+          You make my days feel lighter,<br>
+          and my heart a little happier 😊<br><br>
 
-          I’m really glad it’s <b>you</b> 💕
-        </div>
+          I don’t know where this will go,<br>
+          but I know I’d love to start with you 💕
+        </p>
 
-        <p style="font-size:14px; color:#777; margin-top:15px;">
+        <p style="font-size:18px; margin-top:10px;">
           Happy Valentine’s Day 💘
         </p>
 
-        <p style="font-size:13px; color:#999;">
+        <p style="font-size:18px;">
           — From Riya 💖
         </p>
       `;
@@ -151,7 +167,6 @@
       heart.innerHTML = "💖";
       heart.style.left = Math.random() * 100 + "vw";
       heart.style.fontSize = Math.random() * 20 + 15 + "px";
-      heart.style.animationDuration = Math.random() * 2 + 3 + "s";
       document.body.appendChild(heart);
       setTimeout(() => heart.remove(), 5000);
     }
@@ -161,6 +176,3 @@
 
 </body>
 </html>
-
-
-
